Sun Sep 12 18:59:20 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* src/regs.h (cpu_registers): Add FPA registers. Make union with 'raw'
	access.
	* src/session.c (session_tcp_process_input): Check if gdb has killed our
	process.
	* src/module.c (internet_handler): Don't eat OOB and unknown internet
	event codes.
	* src/socket.c (socket_open_server): Set SO_REUSEADDR.
	* src/gdb.c (gdb_ctx): Remove last_packet, last_packet_len.  Add
	got_killed.
	(gdb_got_killed): Add.
	(process_packet): Increase buf to 512 bytes. Simplify 'g'/'G'
	processing. Support 'k'. Make 'm' more bulletproof. More 'q' support.
	(send_packet): Avoid temporary buffer (at expense of call multiple
	times the send routine).
	* src/gdb.h (gdb_got_killed): Added.

Wed Sep  8 19:11:00 BST  John-Mark Bell  <jmb@netsurf-browser.org>

	* src/gdb.c (process_packet): Fix parsing of qC packet.

Tue Sep  7 02:29:40 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* src/session.c (session_ctx_create): assign session_ctx::type.
	(post_abort_handler): use session_tcp_send_for_gdb().
	(session_is_connected): constify parameter.
	(session_restore_environment): Reset previous environment values after
	restore.
	* src/header.cmhg (error-chunk-base-number,error-identifiers): Define.
	* src/constants.h: Added.
	* src/module.c (command_handler): Check for multiple gdb session
	connects.  Only destroy init_session when it hasn't been done before.
	(post_run_handler): With timeout, restore environment and destroy
	session (as you don't have a garantee the exit handler will be called
	as RISC OS can still bail out with an error before that.
	* src/gdb.c (gdb_process_input): Implement query thread ID.
	(send_packet): Simplify.
	Various minor cleanups and debug related changes.

Sun Sep  5 23:22:38 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* src/socket.c: Use SCL socket code.
	* src/debug.c: Add Reporter debug code interface.
	* src/debug.h: Rename debug() to dprintf().  Allow to switch between